test/modules/bradc/badUses/useExpr.good
useExpr.chpl:4: syntax error: 'use' statements must refer to module or enum symbols
