test/modules/bradc/badUses/useExpr.chpl
var x = 1;
var y = 2;

use x + y;
